# lazyfoo_sdl2

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
